dist/media/IngressRoute.navidrome.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: 10.0.10.80
    external-dns.kubernetes.io/target: 10.0.10.80
  labels:
    app.kubernetes.io/instance: media
    app.kubernetes.io/name: navidrome
  name: navidrome
  namespace: media
spec:
  routes:
    - kind: Rule
      match: Host(`music.cmdcentral.xyz`) || Host(`navidrome.cmdcentral.xyz`)
      middlewares:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
      priority: 10
      services:
        - kind: Service
          name: navidrome
          port: 4533
    - kind: Rule
      match: (Host(`music.cmdcentral.xyz`) || Host(`navidrome.cmdcentral.xyz`)) && PathPrefix(`/outpost.goauthentik.io/`)
      priority: 15
      services:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000
    - kind: Rule
      match: (Host(`music.cmdcentral.xyz`) || Host(`navidrome.cmdcentral.xyz`)) && PathPrefix(`/rest/`) && !Query(`c`, `NavidromeUI`)
      priority: 15
      services:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000
  tls:
    secretName: media-tls
